--- a/index.html
+++ b/index.html
@@ -211,6 +211,43 @@
                 </li>
             </ul>
         </section>
+        <section class="join-us">
+            <div class="join-us-video-wrapper">
+                <video 
+                src="" 
+                class="join-us-video"
+                width="960"
+                height="600"
+                poster="./images/video-placeholder.jpg">
+                </video>
+                <button class="join-us-video-play-button" type="button">Play</button>
+            </div>
+            <div class="join-us-body container">
+                <h2 class="join-us-title">Join us</h2>
+                <form class="join-us-form">
+                    <header class="join-us-form-header">
+                        <h3 class="join-us-form-title backdrop-title centered title-big" data-title="Go!">
+                            Start here
+                        </h3>
+                        <div class="join-us-form-subtitle">
+                            fill the form below to start your journey
+                        </div>
+                    </header>
+                    <div class="join-us-form-body">
+                        <!-- labels are invisible, but are necessary for input to function -->
+                        <label class="visually-hidden" for="username">Name</label>
+                        <input type="text" class="join-us-form-input input" id="username" placeholder="Name">
+                        <label class="visually-hidden" for="email">Email</label>
+                        <input type="email" class="join-us-form-input input" id="email" placeholder="Email">
+                        <button class="join-us-form-button button transparent" type="submit">Subscribe</button>
+                    </div>
+                </form>
+            </div>
+        </section>
+        <section class="location">
+            <img src="./images/map.jpg" alt="branches on the map" class="location-map-image" width="960" height="600">
+            <div class="location-body"></div>
+        </section>
     </main>
 </body>
 </html>
