--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 </li>
             </ul>
         </section>
-        <section class="training-types">
+        <section class="training-types container-wide">
             <h2 class="visually-hidden">Types of training</h2>
             <ul class="training-types-list">
                 <!-- leave alt attribute empty as it has no actual meaning -->
@@ -244,9 +244,29 @@
                 </form>
             </div>
         </section>
-        <section class="location">
+        <section class="location container-wide">
             <img src="./images/map.jpg" alt="branches on the map" class="location-map-image" width="960" height="600">
-            <div class="location-body"></div>
+            <div class="location-body">
+                <h2 class="location-title title-medium backdrop-title centered" data-title="look">Find us near you</h2>
+                <div class="location-description">
+                    <p>Nec suas signiferumque id. An eum labore commodo principes. Usu diam noluisse cu, nam adipisci</p>
+                </div>
+                <a href="/" class="location-button button transparent">View more</a>
+            </div>
+        </section>
+        <section class="family">
+            <!-- adding 'container' and 'container-wide' classes to limit the width -->
+            <header class="family-header container">
+                <h2 
+                class="family-title title-big backdrop-title centered"
+                data-title="part">
+                    be a part of our fit family
+                </h2>
+                <div class="family-description">
+                    <p>Training helps you think and feel better. join us!</p>
+                </div>
+            </header>
+            <div class="family-body container-wide"></div>
         </section>
     </main>
 </body>
