--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                         <h3 class="join-us-form-title backdrop-title centered title-big" data-title="Go!">
                             Start here
                         </h3>
-                        <div class="join-us-form-subtitle">
+                        <div class="join-us-form-subtitle section-description">
                             fill the form below to start your journey
                         </div>
                     </header>
@@ -262,11 +262,47 @@
                 data-title="part">
                     be a part of our fit family
                 </h2>
-                <div class="family-description">
+                <div class="family-description section-description">
                     <p>Training helps you think and feel better. join us!</p>
                 </div>
             </header>
-            <div class="family-body container-wide"></div>
+            <div class="family-body container-wide">
+                <img 
+                    src="./images/family/1.jpg" 
+                    alt="training people" 
+                    class="family-image"
+                    width="414"
+                    height="479"
+                    loading="lazy">
+                <img 
+                    src="./images/family/2.jpg" 
+                    alt="training people" 
+                    class="family-image"
+                    width="744"
+                    height="479"
+                    loading="lazy">
+                <img 
+                    src="./images/family/3.jpg" 
+                    alt="training people" 
+                    class="family-image"
+                    width="396"
+                    height="479"
+                    loading="lazy">
+                <img 
+                    src="./images/family/4.jpg" 
+                    alt="training people" 
+                    class="family-image"
+                    width="396"
+                    height="479"
+                    loading="lazy">
+                <img 
+                    src="./images/family/5.jpg" 
+                    alt="training people" 
+                    class="family-image"
+                    width="414"
+                    height="479"
+                    loading="lazy">
+            </div>
         </section>
     </main>
 </body>
