main section completed

--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
                                 <option value="2">2</option>
                             </select>
                         </div>
-                        <button class="calculate-button button transparent" type="submit"></button>
+                        <button class="calculate-button button transparent" type="submit">Calculate</button>
                     </form>
                 </div>
                 <div class="calculate-table-wrapper">
